# ML_Project

./: .gitignore
PYTHON_APP/: call_cpp_from_python.py
PYTHON_APP/projet_annuel_machine_learning/: LinearModel.py  MLP.py  ModelApplication.py  Notebook___CAS_DE_TESTS.ipynb  RBF.py  SVM.py  SVM_Kernel.py  Test_Impleme_RBF.ipynb  Test_Regression_Multiple.ipynb  app.py  main.py  process_dataset.py
PYTHON_APP/projet_annuel_machine_learning/.ipynb_checkpoints/: Notebook___CAS_DE_TESTS-checkpoint.ipynb  Test_Impleme_SVM&Kernel-checkpoint.ipynb
PYTHON_APP/projet_annuel_machine_learning/models/: mlp.json
PYTHON_APP/projet_annuel_machine_learning/static/: main.css
PYTHON_APP/projet_annuel_machine_learning/templates/: index.html
RUST_LIBRARY/: Cargo.toml
RUST_LIBRARY/lib_projet_annuel_machine_learning/: Cargo.toml
RUST_LIBRARY/lib_projet_annuel_machine_learning/src/: lib.rs
RUST_LIBRARY/src/: lib.rs
[TESTS] Cas de Tests pour le Rendu 2 du PA/: Notebook___CAS_DE_TESTS.ipynb
