[package]
name = "lib_projet_annuel_machine_learning"
version = "0.1.0"
authors = ["Le Tacos <56917344+CedricGARVENES@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ndarray = "0.15.1"
ndarray-rand = "0.14.0"
ndarray = "0.14.0"
ndarray-linalg = { version="0.13.1", features=['intel-mkl']}
osqp = "0.6.2"
libm = "0.2.1"
itertools = "0.10.1"